--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 /target
 out/
 cache/
+coverage/
+.envrc
 Cargo.lock
 node_modules/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
 
 # Circuit files
 circuits/proofs/
