--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,11 +1,15 @@
 [profile.default]
 src = 'src'
 out = 'out'
+test = 'test'
 libs = ['lib']
+solc = "0.8.18"
 fs_permissions = [
+    { access = "read", path = "./broadcast"},
     { access = "read", path = "testdata/blockhashmerkleleaves"},
     { access = "read", path = "testdata/blockheaderinfo"},
 ]
+gas_reports = ["*"]
 
 [fuzz]
 runs = 1000
